[metadata]
name = r3build
version = attr: r3build.__version__
url = https://github.com/puhitaku/r3build
author = Takumi Sueda
author_email = puhitaku@gmail.com
license_file = LICENSE
description = A smart file watcher with an easy but powerful configuration.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 4 - Beta
  License :: OSI Approved :: MIT License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6
install_requires =
  click
  tomlkit
  watchdog
  termcolor

[options.entry_points]
console_scripts =
  r3build = r3build.__main__
